<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_shared_view_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_shared_view_model"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_retrofit"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/btn_shared_view_model"
            app:layout_constraintStart_toStartOf="@id/btn_shared_view_model"
            app:layout_constraintTop_toBottomOf="@+id/btn_shared_view_model" />

        <Button
            android:id="@+id/btn_mvi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mvi"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/btn_shared_view_model"
            app:layout_constraintStart_toStartOf="@id/btn_shared_view_model"
            app:layout_constraintTop_toBottomOf="@+id/btn_retrofit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>